# LabAlgoritmiUnipr_Consegne

./: .gitignore  README.md
2025_03_06_Consegna1/: CMakeLists.txt  a.out  consegna1.cpp  file.py
2025_03_26_Consegna2/: 2025_03_28_Consegna2.cpp  compile.sh  graph.dot
3_Consegna/: CMakeLists.txt  Graph.cpp  Graph.h  List.h  Node.h  Vertex.cpp  Vertex.h  compile.sh  graph.dot  main.cpp  programma  runner.sh
3_Consegna/Data_Structure/: Graph.cpp  Graph.h  Stack.cpp  Stack.h  Vertex.cpp  Vertex.h
Consegna4/: .gitignore  MinHeap.cpp  MinHeap.h  shortesth_path.cpp
Consegna4/BellmanFord/: BellManFord.cpp  a.out
Consegna4/Djkstra/: shortesth_path.cpp
Consegne/2025_03_06_Consegna1/: consegna1.txt
Consegne/2025_03_26_Consegna2/: 2025_03_28_Consegna2.cpp  graph.dot  run.sh
Consegne/2025_05_10_3_Consegna/: Notes.xopp  compile.sh  main.cpp  programma
Consegne/2025_05_10_3_Consegna/Data_Structure/: Graph.cpp  Graph.h  Vertex.h
Consegne/2025_06_15_Consegna5/: CMakeLists.txt  compile.sh  main  main.cpp  run.sh
Consegne/2025_06_15_Consegna5/Data_Structure/: Dimensione.h  DisjointSet.cpp  DisjointSet.h  Graph.cpp  Graph.h
Consegne/2025_06_15_Consegna5/dot_output/: graph.dot  graph_kruskal.dot
Consegne/2025_06_15_Consegna5/file_input/: graph_input.txt
appunti/: .Appunti_LaboratorioAlgo.autosave.xopp  Appunti_LaboratorioAlgo.xopp
codice_lezione/Alberi/: lezione8_tree_dot.cpp
codice_lezione/grafi/: lezione13-grafi-DFS.cpp  lezione15-grafi-check-cycle.cpp  lezione16-grafi-bfs.cpp  lezione17-grafi-dijkstra-grafi-sintetici.cpp
(+2 files in other folders)
