cmake_minimum_required(VERSION 3.31)
project(2025_06_15_Consegna5)

set(CMAKE_CXX_STANDARD 17)

add_executable(2025_06_15_Consegna5 main.cpp
        Data_Structure/Graph.cpp
        Data_Structure/Graph.h
        Data_Structure/DisjointSet.cpp
        Data_Structure/DisjointSet.h
        Data_Structure/Dimensione.h)
